CmCapture/include/CmCapture.h

 

/**获取指纹特征值回调函数
*@param pBmpBuff用于存储指纹BMP图片的内存空间，应不小于 512*512字节。
*@param pFeature指纹特征值，内存不小于1024字节。
*@param pUserData预留，未使用。
*/
typedef bool (__stdcall * callBackGetFPDataAsync)(unsigned char* pBmpBuff,unsigned char * pFeature, void *pUserData);
/**@brief 视频放大
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camZooIn(long devIndex);
 

/**@brief 视频缩小
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camZoomOut(long devIndex);
 

/**@brief 视频以最适比例显示到窗口
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camOptimalPreview(long devIndex);
 

/**@brief 视频以原始比例显示到窗口
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camOriginalPreview(long devIndex);
 


/**@brief 设备蜂鸣
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] Count 鸣响次数
*@param [in] Duration 一次鸣响时长，单位ms
*@param [in] Interval 每次鸣响间隔时间，单位ms
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention 
*/
CAMSDK_API long camEnableBuzzer(long devIndex, long Count = 3, long duration = 500, long interval = 500);
/**@brief 弹出“视频效果”设置窗口
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camShowImageSettingWindow(long devIndex);
/**@brief 弹出“视频属性”设置窗口
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camShowDevSettingWindow(long devIndex);
/**@brief 设置JPG压缩率 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] quanlity 压缩率值范围：0~100。100不压缩，质量最好尺寸最大
*@return 
	- @ref ERR_NONE 成功
*@note 设置存储图像(拍照)的JPG压缩率，可在开启视频前设置或拍照时设置。SDK初始拍jpg格式照片默认压缩率（质量）为55.
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camSetImageJPGQuanlity(long devIndex,long quanlity);
/**@brief 内存拍照 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [out] width  图像的宽度
		[out] height 图像的高度
		[out] bpp 每个像素占用的bit数
*@return
	内存中图像数据
*@note
*@pre @ref camInitCameraLib @ref camOpenDev
*@attention 
*/
CAMSDK_API char *camCaptureImageBuff(long devIndex,long &width,long &height,long &bpp);
/**@brief  保存图片
*
*@param [in] src 图像数据
*@param [in] width  图像的宽
*@param [in] height 图像的高
*@param [in] bpp 每个像素占用的bit数
*@param [in] filePath 保存为此文件（全路径）
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSaveImage(char *src,long width,long height,long bpp,char *filePath);
 


/**@brief 去噪
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] IsAvailabel 是否启用去噪功能。0-禁用，1-启用。
*@return 
	- @ref ERR_NONE 成功
*@note 可以开启视频之前设置。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageDenoise(long devIndex,bool IsAvailabel);
/**@brief 设置图片色彩格式
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] type 0-彩色(24bpp)，1-灰度，2-黑白。
*@return 
	- @ref ERR_NONE 成功
*@note 可以开启视频之前设置。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageColorStyle(long devIndex,long type);
/**@brief 设置图片DPI
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] xDPI 
*@param [in] yDPI 
*@return 
	- @ref ERR_NONE 成功
*@note （1）如果设置DPI后（camSetImageDPI），返回设置的DPI
	   （2）如果没有设置DPI，根据当前设置的分辨率返回DPI

*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageDPI(long devIndex,long xDPI,long yDPI);
/**@brief  拍照启用防篡改标记
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] IsAvailabel 防篡改是否使能，0-禁用，1-启用
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camSetImageFileSign(long devIndex,bool IsAvailabel);
/**@brief 获取系统麦克风个数
*
*@param [out] count 麦克风个数
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camGetAudioDevCount(long &count);
/**@brief 获取麦克风名称
*
*@param [in] devIndex 麦克风序号,0号开始
*@return
	- 麦克风名称
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API char *camGetAudioDevName(long devIndex);
/**@brief 获得支持的录像格式个数 
*
*@param [out] lCount 录像格式个数
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre  
*/
CAMSDK_API long camGetVideoEncodeCount(long &lCount);
/**@brief 获得录像格式名称 
*
*@param [in] Index 录像格式ID
*@param [out] sEncodeName 获得指定ID的录像格式名称
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre
*/
CAMSDK_API long camGetVideoEncodeName(long Index,char * sEncodeName);
/**@brief 录像 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@param [in] filePath 要生成的录像文件
*@param [in] micphone 选用的麦克风ID
*@param [in] videoFormat 输出的录像文件格式ID
*@return
	- @ref ERR_NONE 成功
*	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camStartRecord(long devIndex,char * filePath,long micphone,long videoFormat,bool bRecordCam = true);
/**@brief 关闭录像 
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev @ref camStartRecord
*@attention
*/
CAMSDK_API long camStopRecord(long devIndex);
/**@brief 录像时获得麦克风音量
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return 麦克风音量
*/
CAMSDK_API long camGetMicrophoneVolumeLevel();
/**@brief HTTP上传文件
*
*@param [in] filePath 导出的TIF文件全路径。
*@param [in] url 服务端HTTP连接。
*@param [in] param 自定义信息，可为空。
*@param [out] response 服务器应答内容，可能是空
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camUpdataFileHttp(char *filePath,char *url,char *param,char *response);
/**@brief FTP上传文件
*
*@param [in] filePath 需上传的文件的全路径。
*@param [in] ftpPath FTP服务地址。
*@param [in] userName ftp用户名。
*@param [in] userPsd ftp用户密码。
*@param [in] targetName 在ftp服务器端生成的文件存储名。
*@return
	- @ref ERR_NONE 成功,
	-1上传失败 
	-2登陆服务器根路径失败
	-3 创建子文件夹失败 
	-4 断开连接失败 
	-5 连接失败
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camUpdataFileFtp(char *filePath,char *ftpPath,char *userName,char *userPsd,char *targetName);
/**@brief 身份证读卡器初始化
*@prarm [无]
*@return
 @ref ERR_NONE 成功
*@note 初始化成功后，退出须反初始化
*/
CAMSDK_API long idcardrfidInit();
/**@brief 身份证读卡器反初始化，断开读卡器
*@prarm [无]
*@return
 @ref ERR_NONE 反初始化成功
*/
CAMSDK_API long idcardrfidUnInit();
/**@brief 身份证读卡器读卡
*@prarm [in] Msg,身份证信息
*@prarm [in] headerFilePath,识别生成头像
*@return
 @ref ERR_NONE 成功
*/
CAMSDK_API long idcardrfidReadIDCard(BaseMsg &Msg,char* headerFilePath);
/**@brief 身份证读卡器获取指纹
*@prarm [in] pcFPMsg，指纹数据（特征值）
*@prarm [in] nMsgSize，指纹数据长度
*@return
	- 值为-1时，表示没有指纹信息。
	- @ref ERR_NONE 成功
*/
CAMSDK_API long idcardrfidGetFingerprintMsg(unsigned char* pcFPMsg,long &nMsgSize);
/**@brief 指纹模块初始化
*
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintInit();
/**@brief 指纹模块反初始化
*
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintUnInit();
/**@brief 采集指纹
*
*@param [out] Bmp指纹图片。用于存储指纹BMP图片的内存空间，应不小于 512*512字节。
*@param [out] 指纹原始数据文件。用于存储指纹原始数据的内存空间，应不512*512 字节。
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintGetImage(unsigned char* pBmpBuff,unsigned char *pRawData);
/**@brief 获取指纹特征值
*
*@param [in] 已有的指纹原始数据。
*@param [out] 生成的指纹特征值。内存不小于1024字节。
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintGetFeature(const unsigned char *pRawData,unsigned char *pFeatureData);
/**@brief 异步采集指纹
*
*@param [in] funCB 函数原型typedef bool (__stdcall * callBackGetFPDataAsync)(unsigned char* pBmpBuff,unsigned char * pFeature, void *pUserData); pBmpBuff用于存储指纹BMP图片的内存空间，应不小于 512*512字节。pFeature指纹特征值，内存不小于1024字节。pUserData预留，未使用。
*@param [in] 预留，未使用。
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintStartGetFPDataAsync(callBackGetFPDataAsync funCB,void *pUserData);
/**@brief 停止异步采集指纹
*
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintStopGetFPDataAsync();
 

/**@brief 指纹对比
*
*@param [in] pFeature1 指纹特征值1。
*@param [in] pFeature2 指纹特征值2。
*@return
	-  
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long fingerprintContrast(unsigned char* pFeature1,unsigned char *pFeature2);