CmCapture/CmCaptureHelper.cs


        //Chad
        /// <summary>
        /// 原始比例
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camOriginalPreview(int devIndex);
        /// <summary>
        /// 最适比例
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camOptimalPreview(int devIndex);
        /// <summary>
        /// 获取麦克风格式名称
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="sEncodeName"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camGetVideoEncodeName(int devIndex, StringBuilder sEncodeName);
        /// <summary>
        /// 获取麦克风格式数量
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camGetVideoEncodeCount(ref int devIndex);
        /// <summary>
        /// 获取麦克风音量
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camGetMicrophoneVolumeLevel(int devIndex);
        /// <summary>
        /// 停止录制
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camStopRecord(int devIndex);
        /// <summary>
        /// 开始录制
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="filePath"></param>
        /// <param name="micphone"></param>
        /// <param name="videoFormat"></param>
        /// <param name="bRecordCam"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camStartRecord(int devIndex, string filePath, int micphone, int videoFormat, bool bRecordCam);
        /// <summary>
        /// 图片彩色格式
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="type"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camSetImageColorStyle(int devIndex, int type);
        /// <summary>
        /// 放大
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camZooIn(int devIndex);
        /// <summary>
        /// 缩小
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camZoomOut(int devIndex);
        /// <summary>
        /// 获取音频个数
        /// </summary>
        /// <param name="Count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camGetAudioDevCount(ref int Count);
        /// <summary>
        /// 获取音频设备名称
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr camGetAudioDevName(int devIndex);
        /// <summary>
        /// 弹出“视频属性”设置窗口
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camShowDevSettingWindow(int devIndex);
        /// <summary>
        /// 弹出“视频效果”设置窗口
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camShowImageSettingWindow(int devIndex);
        /// <summary>
        /// 设置JPG压缩率
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="quanlity"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camSetImageJPGQuanlity(int devIndex, int quanlity);
        /// <summary>
        /// 拍摄图像到内存
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="width"></param>
        /// <param name="height"></param>
        /// <param name="bpp"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr camCaptureImageBuff(int devIndex, ref int width, ref int height, ref int bpp);
        /// <summary>
        /// 内存数据保存为图片
        /// </summary>
        /// <param name="src"></param>
        /// <param name="width"></param>
        /// <param name="height"></param>
        /// <param name="bpp"></param>
        /// <param name="filePath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camSaveImage(IntPtr src, int width, int height, int bpp, string filePath);
        /// <summary>
        /// 设置是否去噪
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="IsAvailabel"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camSetImageDenoise(int devIndex, bool IsAvailabel);
        /// <summary>
        /// 设置Dpi
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="xDPI"></param>
        /// <param name="yDPI"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camSetImageDPI(int devIndex, int xDPI, int yDPI);
        /// <summary>
        /// 蜂鸣
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="interval">摄像头 0 主头 1 副头</param>
        /// <param name="?">Count 次数 </param>
        /// <param name="Count">duration 鸣响时长，单位ms</param>
        /// <param name="duration">interval 鸣响间隔，单位ms</param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int camEnableBuzzer(int devIndex, int Count, int duration, int interval);
        /// <summary>
        /// 防篡改
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="IsAvailabel"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camSetImageFileSign", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetImageFileSign(int devIndex, bool IsAvailabel);
        /// <summary>
        /// 初始化，连接读卡器
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int idcardrfidInit();
        /// <summary>
        /// 反初始化，断开读卡器
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int idcardrfidUnInit();
        /// <summary>
        /// 获取指纹
        /// </summary>
        /// <param name="buffer"></param>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "idcardrfidGetFingerprintMsg", CallingConvention = CallingConvention.Cdecl)]
        public static extern int IDCardrfidGetFingerprintMsg(IntPtr buffer, ref int count);
        /// <summary>
        /// 身份证信息
        /// </summary>
        /// <param name="Msg"></param>
        /// <param name="headerFilePath"></param>
        /// <returns></returns>
        ///CharSet = CharSet.Unicode
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int idcardrfidReadIDCard(IntPtr Msg, string headerFilePath);
        /// <summary>
        /// 指纹初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintInit();
        /// <summary>
        /// 指纹反初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintUnInit();
        /// <summary>
        /// 采集指纹
        /// </summary>
        /// <param name="pBmpBuff"></param>
        /// <param name="pRawData"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintGetImage(byte[] pBmpBuff, byte[] pRawData);
        /// <summary>
        /// 获取指纹特征值
        /// </summary>
        /// <param name="pRawData"></param>
        /// <param name="pFeatureData"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintGetFeature(byte[] pRawData, IntPtr pFeatureData);
        /// <summary>
        /// 指纹对比
        /// </summary>
        /// <param name="pFeature1"></param>
        /// <param name="pFeature2"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintContrast(IntPtr pFeature1, IntPtr pFeature2);
        /// <summary>
        /// 异步采集指纹
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintStartGetFPDataAsync(AsynchronousCallback callback, byte[] pUserData);
        /// <summary>
        /// 停止异步采集指纹
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int fingerprintStopGetFPDataAsync();
        /// <summary>
        /// HTTP上传文件
        /// </summary>
        /// <param name="filePath"></param>
        /// <param name="url"></param>
        /// <param name="param"></param>
        /// <param name="response"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camUpdataFileHttp", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UpdataFileHttp(string filePath, string url, string param, IntPtr response);
        /// <summary>
        /// FTP上传文件
        /// </summary>
        /// <param name="filePath"></param>
        /// <param name="url"></param>
        /// <param name="param"></param>
        /// <param name="response"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camUpdataFileFtp", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UpdataFileFtp(string filePath, string ftpPath, string userName, string userPsd, string targetName);
